--- a/index.html
+++ b/index.html
@@ -6,84 +6,105 @@
   <title>Sai Prakash Kadiyala | Data Analyst</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #121212;
-      color: #e0e0e0;
       margin: 0;
-      padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #121212;
+      color: #f5f5f5;
     }
     header {
-      background-color: #1f1f1f;
-      padding: 40px 20px;
+      background: linear-gradient(to right, #000428, #004e92);
+      color: white;
       text-align: center;
+      padding: 60px 20px 30px;
     }
     header h1 {
-      margin: 0;
-      font-size: 2.5em;
-      color: #ffcc00;
+      font-size: 2.8em;
+      margin-bottom: 0.3em;
+    }
+    header p {
+      margin: 5px 0;
+      color: #ccc;
     }
     nav {
-      background-color: #1a1a1a;
-      text-align: center;
-      padding: 10px 0;
+      background: #1a1a1a;
+      display: flex;
+      justify-content: center;
+      gap: 25px;
+      padding: 10px;
     }
     nav a {
       color: #ccc;
       text-decoration: none;
-      margin: 0 15px;
-      font-weight: 500;
+      transition: color 0.3s;
     }
     nav a:hover {
       color: #ffcc00;
     }
     section {
-      max-width: 900px;
-      margin: 40px auto;
+      max-width: 1000px;
+      margin: 50px auto;
       padding: 0 20px;
     }
     h2 {
       color: #ffcc00;
-      margin-top: 40px;
+      margin-bottom: 10px;
     }
     ul {
       padding-left: 20px;
     }
+    .projects {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+    .card {
+      background: #1e1e1e;
+      border: 1px solid #2e2e2e;
+      border-radius: 10px;
+      padding: 20px;
+      transition: transform 0.2s ease;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+    }
+    .card h3 {
+      margin-top: 0;
+      color: #ffcc00;
+    }
     footer {
-      background-color: #1f1f1f;
-      color: #999;
       text-align: center;
-      padding: 20px 0;
+      padding: 30px 10px;
+      background: #1f1f1f;
+      color: #999;
       margin-top: 60px;
     }
     @media (max-width: 600px) {
-      header h1 {
-        font-size: 1.6em;
-      }
-      nav a {
-        display: inline-block;
-        margin: 5px;
+      nav {
+        flex-wrap: wrap;
+        gap: 10px;
       }
     }
   </style>
 </head>
 <body>
-
   <header>
     <h1>Sai Prakash Kadiyala</h1>
     <p>Data Analyst | SQL • Python • Power BI • Tableau</p>
-    <p>Email: kadiyalasaiprakash5@gmail.com | Phone: +1 551-334-8415</p>
+    <p>Email: kadiyalasaiprakash5@gmail.com | 📱 +1 551-334-8415</p>
   </header>
 
   <nav>
     <a href="#about">About</a>
     <a href="#skills">Skills</a>
     <a href="#experience">Experience</a>
+    <a href="#projects">Projects</a>
     <a href="#contact">Contact</a>
   </nav>
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I’m a data analyst with 3 years of experience turning complex data into smart decisions. I work with SQL, Python, and BI tools to help companies find clarity in chaos.</p>
+    <p>I’m a data analyst with 3 years of experience turning complex data into smart decisions. I specialize in SQL, Python, Power BI, and Tableau to solve real business problems and drive insight-led growth.</p>
   </section>
 
   <section id="skills">
@@ -99,7 +120,6 @@
 
   <section id="experience">
     <h2>Experience</h2>
-
     <h3>CVS Health – Data Analyst (May 2024 – Present)</h3>
     <ul>
       <li>Built Power BI dashboards for hospital metrics</li>
@@ -122,16 +142,34 @@
     </ul>
   </section>
 
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="projects">
+      <div class="card">
+        <h3>Sales Dashboard</h3>
+        <p>Built an interactive Power BI dashboard to track sales, revenue, and customer behavior over time.</p>
+      </div>
+      <div class="card">
+        <h3>Healthcare Forecasting</h3>
+        <p>Used ARIMA models in Python to forecast patient visits and optimize resource allocation.</p>
+      </div>
+      <div class="card">
+        <h3>Customer Segmentation</h3>
+        <p>Performed clustering and segmentation on e-commerce data using Python and visualized in Tableau.</p>
+      </div>
+    </div>
+  </section>
+
   <section id="contact">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:kadiyalasaiprakash5@gmail.com" style="color:#ffcc00;">kadiyalasaiprakash5@gmail.com</a></p>
     <p>Phone: +1 551-334-8415</p>
-    <p>Location: Jersey City, NJ</p>
+    <p><a href="https://www.linkedin.com/in/sai-prakash-kadiyala/" target="_blank" style="color:#ffcc00;">LinkedIn Profile</a></p>
+    <p><a href="https://github.com/SaiPrakash9798" target="_blank" style="color:#ffcc00;">GitHub Profile</a></p>
   </section>
 
   <footer>
-    &copy; 2025 Sai Prakash Kadiyala | Made with 💛 using GitHub Pages
+    &copy; 2025 Sai Prakash Kadiyala | Built with 💛 and GitHub Pages
   </footer>
-
 </body>
 </html>
