--- a/index.html
+++ b/index.html
@@ -1,175 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sai Prakash Kadiyala | Data Analyst</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sai Prakash | Data Analyst</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: #121212;
-      color: #f5f5f5;
+      font-family: 'Poppins', sans-serif;
+      background-color: #0d1117;
+      color: #f0f6fc;
     }
-    header {
-      background: linear-gradient(to right, #000428, #004e92);
-      color: white;
-      text-align: center;
-      padding: 60px 20px 30px;
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      min-height: 100vh;
     }
-    header h1 {
-      font-size: 2.8em;
-      margin-bottom: 0.3em;
+    .left {
+      flex: 1;
+      padding: 60px 30px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: #161b22;
     }
-    header p {
-      margin: 5px 0;
-      color: #ccc;
+    .left h1 {
+      font-size: 2.5em;
+      color: #facc15;
+      text-shadow: 0 0 10px #facc15;
+      margin: 0;
+    }
+    .left h2 {
+      margin: 10px 0;
+      color: #c9d1d9;
+      font-weight: normal;
+    }
+    .left p {
+      font-size: 1.2em;
+      color: #8b949e;
+    }
+    .btn {
+      margin-top: 20px;
+      padding: 10px 25px;
+      font-weight: bold;
+      background-color: #facc15;
+      border: none;
+      border-radius: 20px;
+      cursor: pointer;
+      box-shadow: 0 0 10px #facc15;
+      transition: transform 0.3s ease;
+    }
+    .btn:hover {
+      transform: scale(1.05);
+    }
+    .right {
+      flex: 1;
+      background-color: #0d1117;
+      display: flex;
+      flex-wrap: wrap;
+      padding: 40px;
+      justify-content: center;
+      align-items: center;
+      gap: 30px;
+    }
+    .icon {
+      width: 80px;
+      height: 80px;
+      object-fit: contain;
+      transition: transform 0.3s;
+    }
+    .icon:hover {
+      transform: scale(1.15);
     }
     nav {
-      background: #1a1a1a;
-      display: flex;
-      justify-content: center;
-      gap: 25px;
+      width: 100%;
+      text-align: center;
+      background: #1f2937;
       padding: 10px;
     }
     nav a {
-      color: #ccc;
+      margin: 0 15px;
+      color: #d1d5db;
       text-decoration: none;
-      transition: color 0.3s;
     }
     nav a:hover {
-      color: #ffcc00;
+      color: #facc15;
     }
-    section {
-      max-width: 1000px;
-      margin: 50px auto;
-      padding: 0 20px;
-    }
-    h2 {
-      color: #ffcc00;
-      margin-bottom: 10px;
-    }
-    ul {
-      padding-left: 20px;
-    }
-    .projects {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 20px;
-      margin-top: 20px;
-    }
-    .card {
-      background: #1e1e1e;
-      border: 1px solid #2e2e2e;
-      border-radius: 10px;
-      padding: 20px;
-      transition: transform 0.2s ease;
-    }
-    .card:hover {
-      transform: translateY(-5px);
-    }
-    .card h3 {
-      margin-top: 0;
-      color: #ffcc00;
-    }
-    footer {
-      text-align: center;
-      padding: 30px 10px;
-      background: #1f1f1f;
-      color: #999;
-      margin-top: 60px;
-    }
-    @media (max-width: 600px) {
-      nav {
-        flex-wrap: wrap;
-        gap: 10px;
+    @media (max-width: 768px) {
+      .container {
+        flex-direction: column;
       }
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Sai Prakash Kadiyala</h1>
-    <p>Data Analyst | SQL • Python • Power BI • Tableau</p>
-    <p>Email: kadiyalasaiprakash5@gmail.com | 📱 +1 551-334-8415</p>
-  </header>
-
   <nav>
-    <a href="#about">About</a>
-    <a href="#skills">Skills</a>
-    <a href="#experience">Experience</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Projects</a>
+    <a href="#">Resume</a>
+    <a href="#">Contact</a>
   </nav>
-
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I’m a data analyst with 3 years of experience turning complex data into smart decisions. I specialize in SQL, Python, Power BI, and Tableau to solve real business problems and drive insight-led growth.</p>
-  </section>
-
-  <section id="skills">
-    <h2>Skills</h2>
-    <ul>
-      <li><strong>Languages:</strong> SQL, Python, R, DAX</li>
-      <li><strong>Databases:</strong> SQL Server, PostgreSQL, Snowflake</li>
-      <li><strong>Tools:</strong> Power BI, Tableau, Excel, Airflow</li>
-      <li><strong>Cloud:</strong> AWS (S3, Redshift, Lambda)</li>
-      <li><strong>ETL:</strong> Python scripting, APIs, dbt, Power Query</li>
-    </ul>
-  </section>
-
-  <section id="experience">
-    <h2>Experience</h2>
-    <h3>CVS Health – Data Analyst (May 2024 – Present)</h3>
-    <ul>
-      <li>Built Power BI dashboards for hospital metrics</li>
-      <li>Automated data pipelines using Python and AWS</li>
-      <li>Forecasted patient inflow using ARIMA models</li>
-    </ul>
-
-    <h3>Accenture – Data Analyst (Jul 2021 – Aug 2022)</h3>
-    <ul>
-      <li>Designed Tableau dashboards for logistics tracking</li>
-      <li>Integrated API data into centralized warehouses</li>
-      <li>Automated Excel reports using SQL and Macros</li>
-    </ul>
-
-    <h3>UrbanStat – Junior Data Analyst (Jan 2021 – Jul 2021)</h3>
-    <ul>
-      <li>Cleaned and visualized open city data</li>
-      <li>Built dashboards in Tableau and Data Studio</li>
-      <li>Collaborated on policy planning using data insights</li>
-    </ul>
-  </section>
-
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="projects">
-      <div class="card">
-        <h3>Sales Dashboard</h3>
-        <p>Built an interactive Power BI dashboard to track sales, revenue, and customer behavior over time.</p>
-      </div>
-      <div class="card">
-        <h3>Healthcare Forecasting</h3>
-        <p>Used ARIMA models in Python to forecast patient visits and optimize resource allocation.</p>
-      </div>
-      <div class="card">
-        <h3>Customer Segmentation</h3>
-        <p>Performed clustering and segmentation on e-commerce data using Python and visualized in Tableau.</p>
-      </div>
+  <div class="container">
+    <div class="left">
+      <p>Hello! Thanks for visiting my website 😊</p>
+      <h1>I'm Sai Prakash</h1>
+      <h2>Data Analyst</h2>
+      <button class="btn">MY WORK</button>
     </div>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:kadiyalasaiprakash5@gmail.com" style="color:#ffcc00;">kadiyalasaiprakash5@gmail.com</a></p>
-    <p>Phone: +1 551-334-8415</p>
-    <p><a href="https://www.linkedin.com/in/sai-prakash-kadiyala/" target="_blank" style="color:#ffcc00;">LinkedIn Profile</a></p>
-    <p><a href="https://github.com/SaiPrakash9798" target="_blank" style="color:#ffcc00;">GitHub Profile</a></p>
-  </section>
-
-  <footer>
-    &copy; 2025 Sai Prakash Kadiyala | Built with 💛 and GitHub Pages
-  </footer>
+    <div class="right">
+      <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python" />
+      <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="SQL" />
+      <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tableau/tableau-original.svg" alt="Tableau" />
+      <img class="icon" src="https://cdn-icons-png.flaticon.com/512/888/888878.png" alt="Excel" />
+      <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML" />
+      <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JS" />
+      <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/aws/aws-original.svg" alt="AWS" />
+      <img class="icon" src="https://seeklogo.com/images/S/snowflake-logo-B6B1F6F8D7-seeklogo.com.png" alt="Snowflake" />
+      <img class="icon" src="https://cdn-icons-png.flaticon.com/512/1087/1087840.png" alt="AI" />
+    </div>
+  </div>
 </body>
 </html>
