--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sai Prakash | Data Analyst</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -115,13 +113,12 @@
     <div class="right">
       <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python" />
       <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="SQL" />
-      <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tableau/tableau-original.svg" alt="Tableau" />
-      <img class="icon" src="https://cdn-icons-png.flaticon.com/512/888/888878.png" alt="Excel" />
-      <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML" />
-      <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JS" />
       <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/aws/aws-original.svg" alt="AWS" />
       <img class="icon" src="https://seeklogo.com/images/S/snowflake-logo-B6B1F6F8D7-seeklogo.com.png" alt="Snowflake" />
-      <img class="icon" src="https://cdn-icons-png.flaticon.com/512/1087/1087840.png" alt="AI" />
+      <img class="icon" src="https://cdn-icons-png.flaticon.com/512/2331/2331970.png" alt="Analytics" />
+      <img class="icon" src="https://cdn.worldvectorlogo.com/logos/power-bi-1.svg" alt="Power BI" />
+      <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tableau/tableau-original.svg" alt="Tableau" />
+      <img class="icon" src="https://www.vectorlogo.zone/logos/looker/looker-icon.svg" alt="Looker" />
     </div>
   </div>
 </body>
