--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
     </div>
     <div class="right">
       <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python">
-      <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="SQL">
-      <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/aws/aws-original.svg" alt="AWS">
-      <img class="icon" src="https://seeklogo.com/images/S/snowflake-logo-B6B1F6F8D7-seeklogo.com.png" alt="Snowflake">
-      <img class="icon" src="https://cdn-icons-png.flaticon.com/512/2089/2089796.png" alt="Analytics">
+      <img class="icon" src="https://cdn-icons-png.flaticon.com/512/4248/4248443.png" alt="SQL">
+      <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/9/93/Amazon_Web_Services_Logo.svg" alt="AWS">
+      <img class="icon" src="https://assets.brandfolder.com/pl546j-7le8zk-btw9fq/original/Snowflake_Logo.png" alt="Snowflake">
+      <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/8/80/Tableau_Logo.png" alt="Tableau">
       <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/c/cf/Power_bi_logo_black.svg" alt="Power BI">
-      <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tableau/tableau-original.svg" alt="Tableau">
-      <img class="icon" src="https://cdn.iconscout.com/icon/free/png-256/free-looker-283186.png" alt="Looker">
+      <img class="icon" src="https://cdn-icons-png.flaticon.com/512/888/888878.png" alt="Excel">
+      <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Looker.svg/2048px-Looker.svg.png" alt="Looker">
     </div>
   </div>
 </body>
