--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       font-size: 1.1em;
       color: #6b7280;
     }
-    .btn {
+    .btn, .resume-btn {
       margin-top: 25px;
       padding: 12px 28px;
       font-weight: bold;
@@ -53,8 +53,10 @@
       cursor: pointer;
       box-shadow: 0 0 10px #facc15;
       transition: all 0.3s ease;
+      text-decoration: none;
+      display: inline-block;
     }
-    .btn:hover {
+    .btn:hover, .resume-btn:hover {
       transform: scale(1.08);
       background-color: #ffe44d;
     }
@@ -114,17 +116,18 @@
       <p>Hello! Thanks for visiting my website 😊</p>
       <h1>I'm Sai Prakash</h1>
       <h2>Data Analyst</h2>
-      <button class="btn">MY WORK</button>
+      <a class="btn" href="#projects">MY WORK</a>
+      <a class="resume-btn" href="resume.pdf" download>Download Resume</a>
     </div>
     <div class="right">
-      <img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python">
-      <img class="icon" src="https://cdn-icons-png.flaticon.com/512/4248/4248443.png" alt="SQL">
-      <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/9/93/Amazon_Web_Services_Logo.svg" alt="AWS">
-      <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Snowflake_Logo.svg/768px-Snowflake_Logo.svg.png" alt="Snowflake">
-      <img class="icon" src="https://cdn.worldvectorlogo.com/logos/tableau-software.svg" alt="Tableau">
-      <img class="icon" src="https://cdn.worldvectorlogo.com/logos/power-bi-1.svg" alt="Power BI">
-      <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/7/73/Microsoft_Excel_2013-2019_logo.svg" alt="Excel">
-      <img class="icon" src="https://cdn.worldvectorlogo.com/logos/looker.svg" alt="Looker">
+      <a href="https://www.python.org/" target="_blank"><img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python"></a>
+      <a href="https://en.wikipedia.org/wiki/SQL" target="_blank"><img class="icon" src="https://cdn-icons-png.flaticon.com/512/4248/4248443.png" alt="SQL"></a>
+      <a href="https://aws.amazon.com/" target="_blank"><img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/9/93/Amazon_Web_Services_Logo.svg" alt="AWS"></a>
+      <a href="https://www.snowflake.com/" target="_blank"><img class="icon" src="https://www.clipartmax.com/middle/m2i8b1d3A0i8K9G6_snowflake-data-warehouse-logo/" alt="Snowflake"></a>
+      <a href="https://www.tableau.com/" target="_blank"><img class="icon" src="https://cdn.worldvectorlogo.com/logos/tableau-software.svg" alt="Tableau"></a>
+      <a href="https://powerbi.microsoft.com/" target="_blank"><img class="icon" src="https://cdn.worldvectorlogo.com/logos/power-bi-1.svg" alt="Power BI"></a>
+      <a href="https://www.microsoft.com/en-us/microsoft-365/excel" target="_blank"><img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/7/73/Microsoft_Excel_2013-2019_logo.svg" alt="Excel"></a>
+      <a href="https://looker.com/" target="_blank"><img class="icon" src="https://cdn.worldvectorlogo.com/logos/looker.svg" alt="Looker"></a>
     </div>
   </div>
 </body>
