--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       font-size: 1.1em;
       color: #6b7280;
     }
-    .btn, .resume-btn {
+    .btn {
       margin-top: 25px;
       padding: 12px 28px;
       font-weight: bold;
@@ -56,7 +56,7 @@
       text-decoration: none;
       display: inline-block;
     }
-    .btn:hover, .resume-btn:hover {
+    .btn:hover {
       transform: scale(1.08);
       background-color: #ffe44d;
     }
@@ -64,15 +64,15 @@
       flex: 1;
       background-color: #ffffff;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-      gap: 40px;
-      padding: 40px;
+      grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+      gap: 20px;
+      padding: 30px;
       align-items: center;
       justify-items: center;
     }
     .icon {
-      width: 70px;
-      height: 70px;
+      width: 60px;
+      height: 60px;
       object-fit: contain;
       transition: transform 0.3s ease, filter 0.3s ease;
     }
@@ -108,7 +108,7 @@
     <a href="#">Home</a>
     <a href="#">About</a>
     <a href="#">Projects</a>
-    <a href="#">Resume</a>
+    <a href="#resume">Resume</a>
     <a href="#">Contact</a>
   </nav>
   <div class="container">
@@ -117,18 +117,21 @@
       <h1>I'm Sai Prakash</h1>
       <h2>Data Analyst</h2>
       <a class="btn" href="#projects">MY WORK</a>
-      <a class="resume-btn" href="resume.pdf" download>Download Resume</a>
     </div>
     <div class="right">
       <a href="https://www.python.org/" target="_blank"><img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python"></a>
       <a href="https://en.wikipedia.org/wiki/SQL" target="_blank"><img class="icon" src="https://cdn-icons-png.flaticon.com/512/4248/4248443.png" alt="SQL"></a>
       <a href="https://aws.amazon.com/" target="_blank"><img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/9/93/Amazon_Web_Services_Logo.svg" alt="AWS"></a>
-      <a href="https://www.snowflake.com/" target="_blank"><img class="icon" src="https://www.clipartmax.com/middle/m2i8b1d3A0i8K9G6_snowflake-data-warehouse-logo/" alt="Snowflake"></a>
+      <a href="https://www.snowflake.com/" target="_blank"><img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/Snowflake_Logo.svg/512px-Snowflake_Logo.svg.png" alt="Snowflake"></a>
       <a href="https://www.tableau.com/" target="_blank"><img class="icon" src="https://cdn.worldvectorlogo.com/logos/tableau-software.svg" alt="Tableau"></a>
       <a href="https://powerbi.microsoft.com/" target="_blank"><img class="icon" src="https://cdn.worldvectorlogo.com/logos/power-bi-1.svg" alt="Power BI"></a>
       <a href="https://www.microsoft.com/en-us/microsoft-365/excel" target="_blank"><img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/7/73/Microsoft_Excel_2013-2019_logo.svg" alt="Excel"></a>
       <a href="https://looker.com/" target="_blank"><img class="icon" src="https://cdn.worldvectorlogo.com/logos/looker.svg" alt="Looker"></a>
     </div>
   </div>
+  <section id="resume" style="padding: 60px 20px; max-width: 900px; margin: auto;">
+    <h2 style="color: #d97706; text-align: center;">Resume</h2>
+    <p style="text-align: center;">Data Analyst with around 3 years of experience translating complex datasets into clear, actionable insights across finance, healthcare, and operations. Proficient in SQL, Python, Power BI, Tableau, and cloud analytics with AWS and Snowflake.</p>
+  </section>
 </body>
 </html>
