--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
       flex: 1;
       background-color: #ffffff;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
-      gap: 10px;
-      padding: 20px;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px;
+      padding: 40px;
       align-items: center;
       justify-items: center;
     }
     .icon {
-      width: 60px;
-      height: 60px;
+      width: 80px;
+      height: 80px;
       object-fit: contain;
       transition: transform 0.3s ease, filter 0.3s ease;
     }
@@ -115,7 +115,7 @@
   <nav>
     <a href="#">Home</a>
     <a href="#">About</a>
-    <a href="#">Projects</a>
+    <a href="#projects">Projects</a>
     <a href="#resume">Resume</a>
     <a href="#">Contact</a>
   </nav>
@@ -130,7 +130,7 @@
       <a href="https://www.python.org/" target="_blank"><img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python"></a>
       <a href="https://en.wikipedia.org/wiki/SQL" target="_blank"><img class="icon" src="https://cdn-icons-png.flaticon.com/512/4248/4248443.png" alt="SQL"></a>
       <a href="https://aws.amazon.com/" target="_blank"><img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/9/93/Amazon_Web_Services_Logo.svg" alt="AWS"></a>
-      <a href="https://www.snowflake.com/" target="_blank"><img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/Snowflake_Logo.svg/512px-Snowflake_Logo.svg.png" alt="Snowflake"></a>
+      <a href="https://www.snowflake.com/" target="_blank"><img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/Snowflake_Logo.svg/512px-Snowflake_Logo.svg.png" alt="Snowflake"></a>
       <a href="https://www.tableau.com/" target="_blank"><img class="icon" src="https://cdn.worldvectorlogo.com/logos/tableau-software.svg" alt="Tableau"></a>
       <a href="https://powerbi.microsoft.com/" target="_blank"><img class="icon" src="https://cdn.worldvectorlogo.com/logos/power-bi-1.svg" alt="Power BI"></a>
       <a href="https://www.microsoft.com/en-us/microsoft-365/excel" target="_blank"><img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/7/73/Microsoft_Excel_2013-2019_logo.svg" alt="Excel"></a>
