--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
       background-color: #ffffff;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      gap: 20px;
-      padding: 40px;
+      gap: 25px;
+      padding: 30px;
       align-items: center;
       justify-items: center;
     }
     .icon {
-      width: 80px;
-      height: 80px;
+      width: 90px;
+      height: 90px;
       object-fit: contain;
       transition: transform 0.3s ease, filter 0.3s ease;
     }
@@ -97,17 +97,22 @@
       color: #d97706;
     }
     #resume {
-      padding: 60px 20px;
+      padding: 80px 30px;
       max-width: 900px;
-      margin: auto;
+      margin: 0 auto 60px auto;
     }
     #resume h2 {
       color: #d97706;
       text-align: center;
+      font-size: 28px;
+      margin-bottom: 30px;
     }
     #resume p, #resume ul {
-      line-height: 1.6;
-      font-size: 16px;
+      line-height: 1.8;
+      font-size: 17px;
+    }
+    #resume ul li {
+      margin-bottom: 10px;
     }
   </style>
 </head>
@@ -130,7 +135,7 @@
       <a href="https://www.python.org/" target="_blank"><img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python"></a>
       <a href="https://en.wikipedia.org/wiki/SQL" target="_blank"><img class="icon" src="https://cdn-icons-png.flaticon.com/512/4248/4248443.png" alt="SQL"></a>
       <a href="https://aws.amazon.com/" target="_blank"><img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/9/93/Amazon_Web_Services_Logo.svg" alt="AWS"></a>
-      <a href="https://www.snowflake.com/" target="_blank"><img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/Snowflake_Logo.svg/512px-Snowflake_Logo.svg.png" alt="Snowflake"></a>
+      <a href="https://www.snowflake.com/" target="_blank"><img class="icon" src="https://seeklogo.com/images/S/snowflake-logo-437F15F342-seeklogo.com.png" alt="Snowflake"></a>
       <a href="https://www.tableau.com/" target="_blank"><img class="icon" src="https://cdn.worldvectorlogo.com/logos/tableau-software.svg" alt="Tableau"></a>
       <a href="https://powerbi.microsoft.com/" target="_blank"><img class="icon" src="https://cdn.worldvectorlogo.com/logos/power-bi-1.svg" alt="Power BI"></a>
       <a href="https://www.microsoft.com/en-us/microsoft-365/excel" target="_blank"><img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/7/73/Microsoft_Excel_2013-2019_logo.svg" alt="Excel"></a>
@@ -139,18 +144,7 @@
   </div>
   <section id="resume">
     <h2>Resume</h2>
-    <ul>
-      <li><strong>Current Role:</strong> Data Analyst at CVS Health</li>
-      <li><strong>Skills:</strong> SQL, Python, Tableau, Power BI, AWS, Snowflake</li>
-      <li><strong>Education:</strong> MS in Data Science, New Jersey Institute of Technology (2024)</li>
-      <li><strong>Experience:</strong>
-        <ul>
-          <li>Built dashboards for healthcare, logistics, and urban planning projects</li>
-          <li>Integrated ETL pipelines using Python, SQL, Airflow, and dbt</li>
-          <li>Led reporting initiatives and created self-service BI solutions</li>
-        </ul>
-      </li>
-    </ul>
+    <iframe src="/Prakash_Data%20analyst1.docx" width="100%" height="1200px" style="border:none;"></iframe>
   </section>
 </body>
 </html>
