--- a/index.html
+++ b/index.html
@@ -107,12 +107,10 @@
       font-size: 28px;
       margin-bottom: 30px;
     }
-    #resume p, #resume ul {
-      line-height: 1.8;
-      font-size: 17px;
-    }
-    #resume ul li {
-      margin-bottom: 10px;
+    iframe {
+      border: none;
+      width: 100%;
+      height: 1200px;
     }
   </style>
 </head>
@@ -144,7 +142,7 @@
   </div>
   <section id="resume">
     <h2>Resume</h2>
-    <iframe src="/Prakash_Data%20analyst1.docx" width="100%" height="1200px" style="border:none;"></iframe>
+    <iframe src="resume.docx"></iframe>
   </section>
 </body>
 </html>
