--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
     nav a:hover {
       color: #d97706;
     }
-    #about {
+    #about, #resume {
       padding: 80px 30px;
       max-width: 900px;
       margin: 0 auto;
     }
-    #about h2 {
+    #about h2, #resume h2 {
       color: #d97706;
       text-align: center;
       font-size: 28px;
@@ -112,21 +112,23 @@
       line-height: 1.8;
       color: #374151;
     }
-    #resume {
-      padding: 80px 30px;
-      max-width: 900px;
-      margin: 0 auto 60px auto;
-    }
-    #resume h2 {
-      color: #d97706;
-      text-align: center;
-      font-size: 28px;
-      margin-bottom: 30px;
-    }
     iframe {
       border: none;
       width: 100%;
       height: 1200px;
+    }
+    .linkedin-icon {
+      display: flex;
+      justify-content: center;
+      margin-top: 20px;
+    }
+    .linkedin-icon img {
+      width: 40px;
+      height: 40px;
+      transition: transform 0.3s ease;
+    }
+    .linkedin-icon img:hover {
+      transform: scale(1.1);
     }
   </style>
 </head>
@@ -171,8 +173,12 @@
   </section>
   <section id="resume">
     <h2>Resume</h2>
-    <iframe src="resume.pdf"></iframe>
+    <iframe src="saiprakash_Data%20_analyst.pdf"></iframe>
+    <div class="linkedin-icon">
+      <a href="https://www.linkedin.com/in/sai-prakash-kadiyala/" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn">
+      </a>
+    </div>
   </section>
 </body>
 </html>
-
