--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   </section>
   <section id="resume">
     <h2>Resume</h2>
-    <iframe src="saiprakash_Data%20_analyst.pdf"></iframe>
+    <iframe src="saiprakash_Data_analyst.pdf"></iframe>
     <div class="linkedin-icon">
       <a href="https://www.linkedin.com/in/sai-prakash-kadiyala/" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn">
