Update  index.html

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <a href="https://www.python.org/" target="_blank"><img class="icon" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python"></a>
       <a href="https://en.wikipedia.org/wiki/SQL" target="_blank"><img class="icon" src="https://cdn-icons-png.flaticon.com/512/4248/4248443.png" alt="SQL"></a>
       <a href="https://aws.amazon.com/" target="_blank"><img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/9/93/Amazon_Web_Services_Logo.svg" alt="AWS"></a>
-      <a href="https://www.snowflake.com/" target="_blank"><img class="icon" src="https://seeklogo.com/images/S/snowflake-logo-437F15F342-seeklogo.com.png" alt="Snowflake"></a>
+      <a href="https://www.snowflake.com/" target="_blank"><img class="icon" src="snowflake-bug-color-rgb@1x.png" alt="Snowflake"></a>
       <a href="https://www.tableau.com/" target="_blank"><img class="icon" src="https://cdn.worldvectorlogo.com/logos/tableau-software.svg" alt="Tableau"></a>
       <a href="https://powerbi.microsoft.com/" target="_blank"><img class="icon" src="https://cdn.worldvectorlogo.com/logos/power-bi-1.svg" alt="Power BI"></a>
       <a href="https://www.microsoft.com/en-us/microsoft-365/excel" target="_blank"><img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/7/73/Microsoft_Excel_2013-2019_logo.svg" alt="Excel"></a>
