--- a/index.html
+++ b/index.html
@@ -172,13 +172,16 @@
     </p>
   </section>
   <section id="resume">
-    <h2>Resume</h2>
-    <iframe src="saiprakash_Data_analyst.pdf"></iframe>
-    <div class="linkedin-icon">
-      <a href="https://www.linkedin.com/in/sai-prakash-kadiyala/" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn">
-      </a>
-    </div>
-  </section>
+  <h2>Resume</h2>
+  <div id="resume-content">
+    <iframe src="saiprakash_Data_analyst.pdf" tabindex="-1" loading="lazy"></iframe>
+  </div>
+  <div class="linkedin-icon">
+    <a href="https://www.linkedin.com/in/sai-prakash-kadiyala/" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn">
+    </a>
+  </div>
+</section>
+
 </body>
 </html>
