--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   <section id="resume">
   <h2>Resume</h2>
   <div id="resume-content">
-    <iframe src="saiprakash_Data_analyst.pdf" tabindex="-1" loading="lazy"></iframe>
+    <<iframe src="https://docs.google.com/gview?url=https://yourusername.github.io/your-repo-name/saiprakash_Data_analyst.pdf&embedded=true" style="height:100vh;" frameborder="0"></iframe>
   </div>
   <div class="linkedin-icon">
     <a href="https://www.linkedin.com/in/sai-prakash-kadiyala/" target="_blank">
