Update  index.html

--- a/index.html
+++ b/index.html
@@ -173,15 +173,21 @@
   </section>
   <section id="resume">
   <h2>Resume</h2>
-  <div id="resume-content">
-    <<iframe src="https://docs.google.com/gview?url=https://yourusername.github.io/your-repo-name/saiprakash_Data_analyst.pdf&embedded=true" style="height:100vh;" frameborder="0"></iframe>
-  </div>
-  <div class="linkedin-icon">
-    <a href="https://www.linkedin.com/in/sai-prakash-kadiyala/" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn">
-    </a>
+  <div style="text-align: center;">
+    <p>
+      You can view my full resume here:<br>
+      <a class="btn" href="saiprakash_Data_analyst.pdf" target="_blank">Open Resume</a>
+    </p>
+    <p>
+      Or download it directly:<br>
+      <a class="btn" href="saiprakash_Data_analyst.pdf" download>Download Resume</a>
+    </p>
+    <div class="linkedin-icon">
+      <a href="https://www.linkedin.com/in/sai-prakash-kadiyala/" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn">
+      </a>
+    </div>
   </div>
 </section>
-
 </body>
 </html>
