--- a/index.html
+++ b/index.html
@@ -172,27 +172,20 @@
     </p>
   <section id="resume">
   <h2>Resume</h2>
-  <div class="resume-wrapper" style="max-width:100%; overflow:auto; height:90vh; text-align:center;">
-    <iframe 
-      src="saiprakash_Data_analyst.pdf" 
-      style="width:100%; height:100%;" 
-      frameborder="0"
-      loading="lazy"
-      onerror="document.getElementById('resume-fallback').style.display='block'; this.style.display='none';">
-    </iframe>
-  </div>
-
-  <!-- Fallback content for mobile or unsupported browsers -->
-  <div id="resume-fallback" style="display:none; text-align:center; margin-top:20px;">
-    <p>Unable to preview resume. Please use the links below:</p>
-    <a class="btn" href="saiprakash_Data_analyst.pdf" target="_blank">Open Resume</a><br><br>
-    <a class="btn" href="saiprakash_Data_analyst.pdf" download>Download Resume</a>
-  </div>
-
-  <div class="linkedin-icon">
-    <a href="https://www.linkedin.com/in/sai-prakash-kadiyala/" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn">
-    </a>
+  <div style="text-align: center;">
+    <p>
+      You can view my full resume here:<br>
+      <a class="btn" href="saiprakash_Data_analyst.pdf" target="_blank">Open Resume</a>
+    </p>
+    <p>
+      Or download it directly:<br>
+      <a class="btn" href="saiprakash_Data_analyst.pdf" download>Download Resume</a>
+    </p>
+    <div class="linkedin-icon">
+      <a href="https://www.linkedin.com/in/sai-prakash-kadiyala/" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn">
+      </a>
+    </div>
   </div>
 </section>
 
