--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <a href="#about">About</a>
     <a href="#projects">Projects</a>
     <a href="#resume">Resume</a>
-    <a href="#">Contact</a>
+    <a href="#contact">Contact</a>
   </nav>
   <div class="container">
     <div class="left">
@@ -186,6 +186,16 @@
         <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn">
       </a>
     </div>
+  </div>
+</section>
+    <section id="contact">
+  <h2 style="text-align:center; color:#d97706; font-size:28px; margin-top:60px;">Contact</h2>
+  <div style="max-width: 600px; margin: 0 auto; padding: 20px; color: #374151; font-size: 1.05em; line-height: 1.6;">
+    <p><strong>Name:</strong> Sai Prakash Kadiyala</p>
+    <p><strong>Email:</strong> <a href="mailto:saikrish.kadiyala@gmail.com" style="color: #2563eb;">saikrish.kadiyala@gmail.com</a></p>
+    <p><strong>Phone:</strong> +1 551-334-8415</p>
+    <p><strong>Location:</strong> Jersey City, NJ</p>
+    <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/sai-prakash-kadiyala/" target="_blank" style="color: #2563eb;">View Profile</a></p>
   </div>
 </section>
 
